--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "aos": "^3.0.0-beta.6",
     "gh-pages": "^3.1.0",
+    "sass": "^1.71.1",
     "typed.js": "^2.0.11"
   },
   "devDependencies": {
@@ -27,7 +28,6 @@
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
